made it so the screen wont rotate, added a new 'med' dictionary file, limit the input to alphabetical chars and if there is no input when the button is pressed the snackbar has a message to display

--- a/app/src/main/res/layout/activity_spell_corrector.xml
+++ b/app/src/main/res/layout/activity_spell_corrector.xml
@@ -25,6 +25,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
+                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                 android:hint="Input Word"/>
 
             <Button
